--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500&display=swap');
+*{
+  margin:0px;
+  padding:0px;
+  background-color: #fff;
+  list-style-type:none;
+  text-decoration: none;
+  font-family: 'Baloo 2', cursive;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Navigation{
+  height:120px;
+  background-color: #fff;
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
   display: flex;
-  flex-direction: column;
+  justify-content:space-between;
+  padding:0px 70px;
+  z-index:999 !important;
+}
+.Logo{
+  height:120px;
+}
+.Nav_nav{
+  display: flex;
+  justify-content:center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.NavUL{
+  display: flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.NavLink{
+  font-size:18px;
+  margin:0px 20px;
+  color: #343a40;
+  font-weight: 500;
+}
+.NavLink:hover{
+color: #ca331b;
 }
