--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   justify-content:space-between;
   padding:0px 70px;
   z-index:999 !important;
+  position: sticky;
+  top:0;
 }
 .Logo{
   height:120px;
@@ -35,4 +37,17 @@
 }
 .NavLink:hover{
 color: #ca331b;
+}
+.BodyContent{
+  display: flex;
+  justify-content:space-between;
+  background-color: #000;
+}
+.bContentOne{
+  width:30vw;
+  background-color: royalblue;
+}
+.bContenttwo{
+  width:70vw;
+  background-color: lightcoral;
 }
